added more code to index and payroll pages

--- a/payroll.html
+++ b/payroll.html
@@ -17,7 +17,7 @@
 
 <header>
 
-    <h1>Time Card</h1>
+    <h1>Payroll</h1>
 
     <nav>
 
@@ -40,6 +40,13 @@
     </nav>
     
 </header>
+
+<main>
+
+<section class="payrollContainer">
+</section>
+        
+</main>
 
     <script src="/assets/js/script.js"></script>
 
