new CSS changes

--- a/index.html
+++ b/index.html
@@ -20,28 +20,36 @@
 
     <h1>Time Card</h1>
 
-    <nav>
+ 
+    
+<section class= "navs">
+        
+   <nav class="box1">
+   <a href="index.html" id="timeCard">Time Card</a> 
+   </nav>
 
-        <ul>
+   <nav class="box2">
+   <a href="payroll.html" id="Payroll">Payroll</a>
+   </nav>
 
-            <li>
-               <a href="index.html">Time Card</a> 
-            </li>
+   <nav class="box3">
+   <a href="input.html" id="input">Input</a>
+   </nav>
 
-            <li>
-                <a href="payroll.html">Payroll</a>
-            </li>
+</section>
 
-            <li>
-                <a href="input.html">Input</a>
-            </li>
 
-        </ul>
+<section class="card">
 
-    </nav>
+<label for="company"></label>
+<input type="text" id="payrate" name="payrate" placeholder="Payrate">
 
-    <h2>Company</h2>
+<label for="company"></label>
+<input type="text" id="company" name="company" placeholder="Company">
 
+</section>  
+ 
+   
 </header>
 
 <main>
@@ -64,6 +72,8 @@
 </main>
 
     <script src="/assets/js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 
 </body>
 
