made some CSS changes

--- a/index.html
+++ b/index.html
@@ -39,15 +39,16 @@
 </section>
 
 
-<section class="card">
+<div class="container mt-5">
+    <div class="card" style="width: 40rem; height: 30rem;" >
+        <div class="card-body">
+            <h5 class="card-title">Get Started!</h5>
+            <a href="#" class="btn btn-primary">Submit</a>
+        </div>
 
-<label for="company"></label>
-<input type="text" id="payrate" name="payrate" placeholder="Payrate">
 
-<label for="company"></label>
-<input type="text" id="company" name="company" placeholder="Company">
 
-</section>  
+
  
    
 </header>
