added more code to HTML for payroll.html and .css

--- a/payroll.html
+++ b/payroll.html
@@ -45,6 +45,14 @@
 <main>
 
 <section class="payrollContainer">
+
+    <div>
+        <select class="companyInfo" id="companyList"></select>
+    </div>
+
+    <div class="payrollInfo" id="payrollData">
+    </div>
+
 </section>
         
 </main>
