--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
 <main>
     <section>
-        <div class="hours" id = 'timer'>
+        <div class="hours">
+            <p id = 'timer'></p>
         </div>
 
         <select class="company" id = 'companyList'>
