new CSS changes

--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
     <section>
         <div class="hours" id = 'timer'>
         </div>
-
+        
+        <label for="company">Company:</label>
         <select class="company" id = 'companyList'>
         </select>
 
-        <button class="clockInOut" id = 'toggle'>
+        <button class="clockInOut" id = 'toggle'> Clock in / Out
         </button>
     </section>
 </main>
