--- a/input.html
+++ b/input.html
@@ -42,7 +42,7 @@
         
     </header>
 
-    <section>
+    <section class="formBox">
         <form>
             <label for="companyName">Company: </label><br>
             <input type="text" name="companyName" id="companyName"><br>
@@ -50,7 +50,7 @@
             <label for="payRate">Payrate: </label><br>
             <input type="text" name="payRate" id="payRate"><br>
 
-            <input type="submit" value="submit">
+            <input type="submit" value="Submit" id="submit">
         </form>
     </section>
     
