--- a/payroll.html
+++ b/payroll.html
@@ -47,6 +47,7 @@
 <section class="payrollContainer">
 
     <div>
+        <label for="company">Company:</label>
         <select class="companyInfo" id="companyList"></select>
     </div>
 
