--- a/input.html
+++ b/input.html
@@ -41,7 +41,8 @@
         </nav>
         
     </header>
-
+ 
+ <section class="container">
     <section class="formBox">
         <form>
             <label for="companyName">Company: </label><br>
@@ -53,7 +54,7 @@
             <input type="submit" value="Submit" id="submit">
         </form>
     </section>
-    
+ </section> 
 
     <script src="/assets/js/inputPage.js"></script>
 </body>
