--- a/payroll.html
+++ b/payroll.html
@@ -43,8 +43,8 @@
 </header>
 
 <main>
-
-<section class="payrollContainer">
+<section class="container">
+  <section class="payrollContainer">
 
     <div>
         <label for="company">Company:</label>
@@ -54,8 +54,9 @@
     <div class="payrollInfo" id="payrollData">
     </div>
 
-</section>
-        
+  </section>
+</section> 
+
 </main>
 
     <script src="/assets/js/script.js"></script>
