--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
             </li>
         </ul>
     </nav>
-
-    <h2>Company</h2>
 </header>
-
 
 <main>
     <section>
@@ -43,17 +40,14 @@
         </div>
         
         <label for="company">Company:</label>
-        <select class="company" id = 'companyList'>
-        </select>
+        <select class="company" id = 'companyList'></select>
 
         <button class="clockInOut" id = 'toggle'> Clock in / Out
         </button>
     </section>
 </main>
 
-    <script src="/assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
 
     <script src="assets/js/timeCard.js"></script>
 </body>
