Adjusted payroll Html with JS link and added some div classes; Removed buttons from JS and added some consts.

--- a/payroll.html
+++ b/payroll.html
@@ -52,6 +52,9 @@
     </div>
 
     <div class="payrollInfo" id="payrollData">
+        <div class="hoursWorked" id="hoursWorked">Hours Worked: <span></span></div>
+        <div class="payRate" id="payRate">Pay Rate: <span></span></div>
+        <div class="totalIncome" id="totalIncome">Total Income: <span></span></div>
     </div>
 
   </section>
@@ -59,7 +62,7 @@
 
 </main>
 
-    <script src="/assets/js/script.js"></script>
+        <script src="path/to/payroll.js"></script>
 
 </body>
 
