Linked payroll js to html, added some div classes and removed JS payroll buttons for other pages.

--- a/payroll.html
+++ b/payroll.html
@@ -52,6 +52,9 @@
     </div>
 
     <div class="payrollInfo" id="payrollData">
+        <div class="hoursWorked" id="hoursWorked"></div>
+        <div class="payRate" id="payRate"></div>
+        <div class="totalIncome" id="totalIncome"></div>
     </div>
 
   </section>
@@ -59,7 +62,7 @@
 
 </main>
 
-    <script src="/assets/js/script.js"></script>
+    <script src="/assets/js/payroll.js"></script>
 
 </body>
 
