--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Time Sheet</title>
 
     <link href="assets/css/reset.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css" />
+
 </head>
 
 <body>
@@ -41,28 +44,33 @@
     </header>
 
 <main>
-    <div class="bigBox">
-        <div class="card">
+    
+        <section class="card">
+
             <div class="timer-container">
+
                 <p id="timer">00:00:00</p>
+
             </div>
+
             <div class="bottom-container">
+
                 <label for="company">Company:</label>
                 <select class="company" id="companyList">
                     <!-- Options will go here -->
                 </select>
                 <button class="clockInOut" id="toggle">Clock in / Out</button>
+
             </div>
-        </div>
-    </div> 
+
+        </section>
    
 </main>
 
     <script src="/assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-
     <script src="assets/js/timeCard.js"></script>
+
 </body>
 
 </html>
