--- a/payroll.html
+++ b/payroll.html
@@ -6,58 +6,65 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Time Sheet</title>
 
-    <link href="assets/css/reset.css" rel="stylesheet"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/payroll.css"/>
+    <link href="assets/css/reset.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/payroll.css" />
 
 </head>
 
 <body>
 
-<header>
+    <header>
 
-    <h1>Payroll</h1>
+        <h1>Payroll</h1>
 
-    <nav>
+        <nav>
 
-        <ul>
+            <ul>
 
-            <li>
-               <a href="index.html">Time Card</a> 
-            </li>
+                <li>
+                    <a href="index.html">Time Card</a>
+                </li>
 
-            <li>
-                <a href="payroll.html">Payroll</a>
-            </li>
+                <li>
+                    <a href="payroll.html">Payroll</a>
+                </li>
 
-            <li>
-                <a href="input.html">Input</a>
-            </li>
+                <li>
+                    <a href="input.html">Input</a>
+                </li>
 
-        </ul>
+            </ul>
 
-    </nav>
-    
-</header>
+        </nav>
 
-<main>
-<section class="container">
-  <section class="payrollContainer">
+    </header>
 
-    <div>
-        <label for="company">Company:</label>
-        <select class="companyInfo" id="companyList"></select>
-    </div>
+    <main>
 
-    <div class="payrollInfo" id="payrollData">
-    </div>
+        <section class="payrollContainer">
 
-  </section>
-</section> 
+            <div>
 
-</main>
+                <div>
+
+                    <label for="company">Company:</label>
+                    <select class="companyInfo" id="companyList"></select>
+
+                </div>
+
+                <div class="payrollInfo" id="payrollData">
+                </div>
+
+            </div>
+
+        </section>
+
+    </main>
 
     <script src="/assets/js/script.js"></script>
 
