fixed payroll bug

--- a/input.html
+++ b/input.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
  
- <section class="container">
+<section class="container">
     <section class="formBox">
         <form>
             <label for="companyName">Company: </label><br>
@@ -46,7 +46,7 @@
     </section>
  </section> 
 
-    <script src="/assets/js/inputPage.js"></script>
+    <script src="./assets/js/inputPage.js"></script>
 </body>
 
 </html>
