--- a/payroll.html
+++ b/payroll.html
@@ -15,9 +15,7 @@
 </head>
 
 <body>
-
 <header>
-
     <h1>Payroll</h1>
 
     <nav>
@@ -43,26 +41,25 @@
 </header>
 
 <main>
-<section class="container">
-  <section class="payrollContainer">
+    <section class="container">
+        <section class="payrollContainer">
 
-    <div>
-        <label for="company">Company:</label>
-        <select class="companyInfo" id="companyList"></select>
-    </div>
+            <div>
+                <label for="company">Company:</label>
+                <select class="companyInfo" id="companyList"></select>
+            </div>
 
-    <div class="payrollInfo" id="payrollData">
-        <div class="hoursWorked" id="hoursWorked"></div>
-        <div class="payRate" id="payRate"></div>
-        <div class="totalIncome" id="totalIncome"></div>
-    </div>
+            <div class="payrollInfo" id="payrollData">
+                <p class="hoursWorked" id="hoursWorked"></p>
+                <p class="payRate" id="payRate"></p>
+                <p class="totalIncome" id="totalIncome"></p>
+            </div>
 
-  </section>
-</section> 
-
+        </section>
+    </section> 
 </main>
 
-    <script src="/assets/js/payroll.js"></script>
+    <script src="./assets/js/payroll.js"></script>
 
 </body>
 
