fixed more media query issues

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     
         <section class="card">
 
-            <div class="timer-container">
+            <div class="timerContainer">
 
                 <p id="timer">00:00:00</p>
 
             </div>
 
-            <div class="bottom-container">
+            <div class="bottomContainer">
 
                 <label for="company">Company:</label>
                 <select class="company" id="companyList">
