finished up CSS

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div class="bottomContainer">
 
-                <label for="company">Company:</label>
+                <p>Company:</p>
 
                 <select class="company" id="companyList">
                     <!-- Options will go here -->
