--- a/payroll.html
+++ b/payroll.html
@@ -50,18 +50,18 @@
 
             <div>
 
-                <div>
+                <div id="listContainer">
 
-                    <label for="company">Company:</label>
+                    <p>Company:</p>
                     <select class="companyInfo" id="companyList"></select>
 
                 </div>
 
                 <div class="payrollInfo" id="payrollData">
 
-                    <p class="hoursWorked" id="hoursWorked"></p>
-                    <p class="payRate" id="payRate"></p>
-                    <p class="totalIncome" id="totalIncome"></p>
+                    <p class="hoursWorked" id="hoursWorked">Hours</p>
+                    <p class="payRate" id="payRate">Pay</p>
+                    <p class="totalIncome" id="totalIncome">Total Income</p>
 
                 </div>
 
