did some final edits on HTML and CSS.

--- a/input.html
+++ b/input.html
@@ -75,6 +75,10 @@
 
     </main>
 
+    <footer>
+        <p>Created by Jason, Cameron, Leonardo, and Justin</p>
+    </footer>
+
     <script src="/assets/js/inputPage.js"></script>
 
 </body>
