--- a/payroll.html
+++ b/payroll.html
@@ -66,13 +66,14 @@
                 </div>
 
             </div>
-    <div class="payrollInfo" id="payrollData">
-
-    </div>
 
         </section>
 
     </main>
+
+    <footer>
+        <p>Created by Jason, Cameron, Leonardo, and Justin</p>
+    </footer>
 
     <script src="./assets/js/payroll.js"></script>
 
