--- a/index.html
+++ b/index.html
@@ -70,12 +70,15 @@
 
     </main>
 
+    <footer>
+        <p>Created by Jason, Cameron, Leonardo, and Justin</p>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
-
     <script src="assets/js/timeCard.js"></script>
+
 </body>
 
 </html>
