fixed commenting error

--- a/input.html
+++ b/input.html
@@ -14,7 +14,7 @@
 
 </head>
 
-//the replacement for alertmessage
+<!-- the replacement for alertmessage -->
 <aside class="modal fade" id="alertModal" tabindex="-1" aria-labelledby="alertModalLabel" aria-hidden="true">
     <section class="modal-dialog">
         <article class="modal-content">
