--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
-//the replacement for alertmessage
+<!-- the replacement for alertmessage -->
 <aside class="modal fade" id="alertModal" tabindex="-1" aria-labelledby="alertModalLabel" aria-hidden="true">
     <section class="modal-dialog">
         <article class="modal-content">
